2014-02-13 Don't allow opening the popup twice
2014-02-11 Different handling for d&d on mobile devices and PC
2014-02-10 Fixed problem with d&d
2014-02-06 Fixed problem with page progress on not reportable page
2014-02-05 Added drag and drop support to image source and image gap
2014-02-05 Added drag and drop support to source list and text modules
2014-02-05 Added custom css support for plots in Plot module
2014-02-04 Fixed state restoring after clicking Reset button in Memo Game module
2014-01-27 Added new command to Puzzle module: getLoadedPromise
2014-01-23 Add Navigation Panel feature.
2014-01-23 Changed type of property Description (from text to html) in Glossary module
2014-01-23 Fixed problem with positioning LaTeX in Text Identification module in book view mode
2014-01-22 Fixed problem with MathJax rendering in Video module
2014-01-16 Fixed problem with drag & drop in Graph module
2014-01-16 Glossary definition click events are not propagated any more to stop navigation buttons display.
2014-01-15 Fixed problem with zero one score.
2014-01-14 Added new score type. result - errors.
2014-01-13 Fixed bug in Text Identification, when clicking on the module was showing navigation arrows
2014-01-13 Added new score type Zero-One
2014-01-13 Allow putting glossary module in header and footer.
2014-01-13 Fixed Text Selection module when marked word has signs before/after.
2014-01-12 Unified command names for presenter and plot addon
2014-01-10 Added CustomScoring methods to Connection module.
2014-01-09 Added CustomScoring methods to True/False module.
2014-01-09 Added show and hide methods to Page Progress module.
2014-01-08 Fixed problem with Memo Game when trying to read state saved in different platform
2014-01-08 Fixed problem with relative URLs in inline styles.
2014-01-08 Changed True/False property type to accept HTML formatting.
2014-01-02 Libraries removed from addon descriptor
2013-12-31 Fixed problem with hiding multiplegap under other addons